--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.10.2",
+    "@material-ui/pickers": "^3.3.10",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -11,6 +13,7 @@
     "ag-grid-enterprise": "^23.2.0",
     "ag-grid-react": "^23.2.0",
     "axios": "^0.19.2",
+    "date-fns": "^2.0.0-beta.5",
     "material-table": "^1.69.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
