--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "axios": "^0.19.2",
     "date-fns": "^2.0.0-beta.5",
     "material-table": "^1.69.2",
+    "moment": "^2.29.4",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-icons": "^4.6.0",
     "react-is": "^16.13.1",
+    "react-moment": "^1.1.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "3.4.1",
     "styled-components": "^5.3.6"
